@@ -1411,6 +1411,8 @@
 2311,0,2000,0,0,300000,0
 //-- LG_FORCEOFVANGUARD
 2313,0,0,0,0,120000,0
+//-- LG_PIETY
+2322,4000:3500:3000:2500:2000,0,0,0,60000:80000:100000:120000:140000,0
 
 //==== Wanderer skills =====================
 //-- WA_SWING_DANCE
