@@ -1075,7 +1075,7 @@
 2319,0,0,0,0,0,0,5,0,no,0,0,0,none,0,		LG_BANDING,Banding
 2320,0,0,0,0,0,0,5,0,no,0,0,0,none,0,		LG_MOONSLASHER,Moon Slasher
 2321,0,0,0,0,0,0,5,0,no,0,0,0,none,0,		LG_RAYOFGENESIS,Ray of Genesis
-2322,0,0,0,0,0,0,5,0,no,0,0,0,none,0,		LG_PIETY,Piety
+2322,7,6,16,0,0x3,1,5,0,no,0,0,0,none,0,		LG_PIETY,Piety
 2323,0,0,0,0,0,0,5,0,no,0,0,0,none,0,		LG_EARTHDRIVE,Earth Drive
 2324,0,0,0,0,0,0,5,0,no,0,0,0,none,0,		LG_HESPERUSLIT,Hesperus Lit
 2325,0,0,0,0,0,0,5,0,no,0,0,0,none,0,		LG_INSPIRATION,Inspiration
