@@ -484,6 +484,7 @@ void initChangeTables(void)
 	
 	add_sc( LG_REFLECTDAMAGE     , SC_REFLECTDAMAGE );
 	set_sc( LG_FORCEOFVANGUARD   , SC_FORCEOFVANGUARD    , SI_FORCEOFVANGUARD   , SCB_MAXHP|SCB_DEF );
+	set_sc( LG_PIETY             , SC_BENEDICTIO         , SI_BENEDICTIO        , SCB_DEF_ELE );
 	
 	set_sc( WA_SWING_DANCE       , SC_SWINGDANCE         , SI_SWINGDANCE        , SCB_SPEED|SCB_ASPD );
 	set_sc( WA_SYMPHONY_OF_LOVER , SC_SYMPHONYOFLOVER    , SI_SYMPHONYOFLOVERS  , SCB_MDEF );
@@ -7036,7 +7037,7 @@ int status_change_start(struct block_list* bl,enum sc_type type,int rate,int val
 		case SC_SILENCE:      sc->opt2 |= OPT2_SILENCE;      break;
 		case SC_SIGNUMCRUCIS: case SC_CHAOS: sc->opt2 |= OPT2_SIGNUMCRUCIS; break;
 		case SC_BLIND:        sc->opt2 |= OPT2_BLIND;        break;
-		case SC_ANGELUS:      sc->opt2 |= OPT2_ANGELUS;      break;
+		case SC_ANGELUS:  case SC_BENEDICTIO:    sc->opt2 |= OPT2_ANGELUS;      break;// Piety use this, i need confirm if Benedictio do it too. [pakpil]
 		case SC_BLEEDING:     sc->opt2 |= OPT2_BLEEDING;     break;
 		case SC_DPOISON:      sc->opt2 |= OPT2_DPOISON;      break;
 		//OPT3
